hphp/hack/test/typecheck/dynamic_props2.php.exp
ERROR: File "dynamic_props2.php", line 5, characters 17-19:
Please add a type hint `public SomeType $f1` (Naming[2001])
ERROR: File "dynamic_props2.php", line 8, characters 10-10:
Was expecting a return type hint (Typing[4030])
